# Keyword-spotting-using-ESP32-SPH0645-and-TensorFlow-Lite-Micro

./: .gitignore  README.md
KWS_model/: config.py  kaggle_make_model.ipynb
KWS_wth_ESP32_SPH0645/: CMakeLists.txt  sdkconfig  sdkconfig.old
KWS_wth_ESP32_SPH0645/main/: CMakeLists.txt  main.cc
KWS_wth_ESP32_SPH0645/main/KWS/: keyword_spotting_config.h  keyword_spotting_interface.h  keyword_spotting_model.cc  keyword_spotting_model.h  keyword_spotting_program.cc
KWS_wth_ESP32_SPH0645/main/KWS/other/: audio_provider.cc  audio_provider.h  command_responder.cc  feature_provider.cc  feature_provider.h  micro_features_generator.cc  micro_features_generator.h  micro_features_micro_features_generator.cpp  micro_features_micro_features_generator.h  micro_model_settings.h  recognize_commands.cc  recognize_commands.h  ringbuf.c
KWS_wth_ESP32_SPH0645/main/KWS/other/lib/: fft.cpp  fft_util.cpp  kiss_fft_int16.cc  kiss_fft_int16.h
KWS_wth_ESP32_SPH0645/main/KWS/other/lib/kissfft/: kiss_fft.c
KWS_wth_ESP32_SPH0645/main/KWS/other/lib/mfcc/: mfcc.cc  mfcc.h  mfcc_dct.cc  mfcc_dct.h  mfcc_mel_filterbank.cc  mfcc_mel_filterbank.h  spectrogram.cc
