idf_component_register(SRCS "main.cc"

"KWS/other/micro_features_generator.cc"
"KWS/other/recognize_commands.cc"
"KWS/other/command_responder.cc"
"KWS/other/feature_provider.cc"
"KWS/other/micro_features_generator.cc"
"KWS/other/audio_provider.cc"
"KWS/other/ringbuf.c"

    
"KWS/keyword_spotting_model.cc" 
"KWS/keyword_spotting_program.cc"

                    INCLUDE_DIRS "")
